fix_UI_issues
* Fixed issue of 'Sending messages from product view page'.
* Fixed issue of 'Issue with product listing display'.
* Fixed issue of 'inbox to respond to messages on desktop is not aligned well'.

--- a/app/assets/stylesheets/common/_footer_actions.css.scss
+++ b/app/assets/stylesheets/common/_footer_actions.css.scss
@@ -1,6 +1,5 @@
 .footer-actions {
-  height: 120px;
-  padding: 10px 0 0;
+  padding: 10px 0;
 
   .btn {
     &.pull-left + .btn.pull-left {
