--- a/app/assets/stylesheets/common/_responsive.css.scss
+++ b/app/assets/stylesheets/common/_responsive.css.scss
@@ -14,16 +14,12 @@
 }
 .footer-actions .fa-container
 {
-  background:#f2f2f2;
-  border-top:1px #ddd solid;
+  background: #f2f2f2;
 }
 @media (min-width: 992px){
   .modal-lg {
     width: auto;
   }
-}
-@media (max-width:1200px) {
-  /* some think */
 }
 
 @media (max-width:1080px) {
@@ -795,5 +791,10 @@
 
   .bx-wrapper .bx-controls-direction a {
     display: none;
+  }
+
+  .main-notice {
+    top: 200px;
+    font-size: 15px;
   }
 }
