--- a/app/assets/stylesheets/toad.css.scss
+++ b/app/assets/stylesheets/toad.css.scss
@@ -851,10 +851,7 @@ min-width:550px;
   margin-bottom:20px;
   display:block;
 }
-.table-responsive
-{
-  margin-bottom:150px;
-}
+
 .pagination
 {
   margin:0px;
